# structures_and_functions

./: .gitignore  .gitmodules  .ignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DISCLOSURE.md  INSTRUCTIONS.md  LICENSE  MATH.md  PLAN.md  README.md  REPORT.md  STEPS.md  TIME_COMPLEXITY.md  dump.py  environment.yml  main_sim.sh  nohup.out  output  path.md  pixi.toml  pyproject.toml  pyrightconfig.json  radii_analysis.sh  setup_membrane.py  setup_vesicle.py  structure_calculation.py  sync_radii_from_flock.sh  sync_unwrapped_from_flock.sh  temp.py
.dvc/: config
.github/: copilot-instructions.md
active_passive_calc/: __init__.py  setup_membrane.py  setup_vesicle.py  structure_calculation.py
active_passive_calc/analysis/: __init__.py  analyzers.py  calculate.py  plot.py
analysis/: calculate.py
crates/crystalline_cylinder_analysis/: Cargo.toml
crates/crystalline_cylinder_analysis/src/: center_of_mass.rs  clusters.rs  correlation.rs  error.rs  fit.rs  integration.rs  laplace.rs  lib.rs  pipeline.rs  replicates.rs
crates/crystalline_cylinder_analysis/src/backend/: cpu.rs  cuda.rs  mod.rs
crates/crystalline_cylinder_analysis/src/input/: discovery.rs  inspect.rs  manifest.rs  mod.rs  safetensor.rs
crates/crystalline_cylinder_analysis/src/model/: case.rs  manifest.rs  mod.rs  results.rs  series.rs
crates/rho_fitting_gpu/: Cargo.toml
crates/rho_fitting_gpu/src/: lib.rs
crates/rho_fitting_gpu/src/coarse_grain_burn/: frame.rs  grid.rs  mod.rs
crates/rho_fitting_numerics/: Cargo.toml
crates/rho_fitting_numerics/src/: arrays.rs  lib.rs
crates/rho_fitting_numerics/src/fitting/: algebra.rs  mod.rs
crates/rho_fitting_numerics/src/interpolation/: mod.rs
crates/rho_fitting_numerics/src/particles/: mod.rs
crates/rho_fitting_numerics/src/pde/: mod.rs
crates/rho_fitting_numerics/src/regression/: mod.rs
crates/rho_fitting_numerics/src/spectral/: mod.rs
crates/rho_fitting_numerics/src/temporal/: mod.rs
crates/rho_fitting_types/: Cargo.toml
crates/rho_fitting_types/src/: constants.rs  errors.rs  lib.rs
crates/rho_fitting_types/src/fields/: mod.rs
crates/rho_fitting_types/src/mechanics/: domain.rs  mod.rs
hexatic/: __init__.py  active_matter_cylinder.py  chirality.py  chirality_geometric.py  dynamic_info_cylinder.py  hexatic_calculation.py  hexatic_cylinder_calculation.py  hoomd_cylinder.py  hoomd_cylinder_flipped.py  hoomd_cylinder_flipped_append.py  hoomd_cylinder_new_rad.py  hoomd_spherical_cavity.py  output.dvc  plan.md  testing.py
hexatic/active_matter_cylinder/: __init__.py  cartesian_compute.py  cartesian_flux.py  cartesian_plots.py  common.py  config.py  fields.py  grid_utils.py  math_utils.py  movie_utils.py  movies.py  outputs.py  radial_px.py  scalar_plots.py  shear_compute.py  shear_decomposition.py  shear_io.py  shear_plots.py  vector_plots.py
hexatic/analysis/: __init__.py  base.py  cylinder.py  hexatic.py  io.py  plot.py  sphere.py  types.py
hexatic/big_lx/: __init__.py  analyze_case.py  backend.py  cases.py  gpu_check.py  lattice.py  plot_center_of_mass.py  plot_polarization_movie.py  run_analysis.py  run_pipeline.py  run_sweep.py  scheduler.py  selective_analysis.py  simulate_case.py  spatial.py  storage.py  validate_cases.py
hexatic/big_lx_analysis/: __init__.py  __main__.py  _native.py  cluster_circ.py  clusters.py  correlations.py  dynamics.py  laplacian.py  plot_com.py  plot_hdf5_clusters.py  plot_velocity_laplace.py  plots.py  prefered_omega_analysis.py  run_all.py  run_clusters.py  run_dynamics.py
hexatic/chirality/: __init__.py  common.py  compute.py  config.py  geometric_common.py  geometric_compute.py  geometric_config.py  geometric_plotting.py  geometric_strand.py  geometric_trajectory.py  outputs.py  plotting.py  translation.py  translation_outputs.py
hexatic/confinement_comparison/: README.md  __init__.py  analyze_case.py  cases.py  diagnostic.py  geometry.py  gpu_check.py  run_analysis.py  run_pipeline.py  run_sweep.py  scheduler.py  simulate_case.py  spatial.py  storage.py  validate_cases.py
hexatic/constants/: __init__.py  cylinder.py  project.py  sphere.py
hexatic/cylinder_dynamics/: __init__.py  __main__.py  common.py  gsd_io.py  plotting.py  radial_exchange_current.py  script.py  series.py  velocity_polar_force_density.py
hexatic/cylinder_restart_ensemble/: KEY.md  __init__.py  common.py  run_A_exact_restart.py  run_B_u0_half.py  run_C_random_orientations.py  run_D_shuffle_orientations.py  run_F_zero_px.py  run_G_u0_double.py  run_H_consistent_axial_mirror.py  run_I_orientation_axial_flip.py  run_J_theta_mirror.py  run_S_passive_u0_zero.py  run_T_reverse_activity.py
hexatic/density_analysis/: __init__.py  analyze_m4_smoothed_continuity.py  plot_m4_local_coefficients.py  run_film_continuity.py  run_fitting.py
rust/rho_fitting_core/: Cargo.toml  pyproject.toml
rust/rho_fitting_core/src/: arrays.rs  coarse_grain.rs  coarse_grain_burn.rs  coarse_grain_cubecl.rs  constants.rs  fft_ops.rs  geometry.rs  lib.rs  library.rs  mechanics.rs  python.rs  regression.rs  sampling.rs
rust/rho_fitting_core/src/coarse_grain_burn/: deposit.rs  frame.rs  gaussian.rs  grid.rs  mod.rs  smooth.rs
rust/rho_fitting_core/src/fields/: mod.rs
rust/rho_fitting_core/src/fitting/: algebra.rs  mod.rs
rust/rho_fitting_core/src/interpolation/: mod.rs
rust/rho_fitting_core/src/mechanics/: domain.rs  libraries.rs  math.rs  mod.rs  operators.rs  sampling.rs  validation.rs
rust/rho_fitting_core/src/particles/: mod.rs
rust/rho_fitting_core/src/pde/: mod.rs
rust/rho_fitting_core/src/regression/: mod.rs
rust/rho_fitting_core/src/spectral/: mod.rs
rust/rho_fitting_core/src/temporal/: mod.rs
setup/: .gitignore  setup.py  setup2.py  setup_membrane.py  setup_vesicle.py  structure_calculation.py
tests/: test_disclination_events.py  test_disclination_order_field_helpers.py  test_film_continuity.py  test_model_fitting_hydrodynamic_plan.py  test_model_fitting_refactor.py  test_multiple_sim_analysis_smoke.py  test_rho_fitting_chebyshev.py  test_rho_fitting_mechanics.py  test_rho_fitting_pde_validation.py
(+168 files in other folders)
