[package]
name = "crystalline-cylinder-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Streaming Rust analysis for crystalline-cylinder trajectories"

[lints]
workspace = true

[dependencies]
bytemuck.workspace = true
memmap2.workspace = true
ndarray.workspace = true
num-complex.workspace = true
rayon.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
tenferro-cpu.workspace = true
tenferro-linalg.workspace = true
tenferro-runtime.workspace = true
