[package]
name = "rho-fitting-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared data model and validation types for rho fitting"

[lints]
workspace = true

[dependencies]
ndarray.workspace = true
thiserror.workspace = true

