[package]
name = "rho_fitting_core"
version = "0.1.0"
edition = "2021"
description = "Rust numerical core for hexatic rho fitting"

[lib]
name = "_rho_fitting_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
num-complex = "0.4"
numpy = "0.29"
pyo3 = { version = "0.29", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"
burn = { version = "0.21", default-features = false, features = ["std"], optional = true }
burn-cuda = { version = "0.21", default-features = false, features = ["std"], optional = true }
burn-wgpu = { version = "0.21", default-features = false, features = ["std", "metal"], optional = true }
rayon = { version = "1", optional = true }
phastft = "0.4.0"

[features]
default = []
gpu-metal = ["burn", "burn-wgpu"]
gpu-cuda = ["burn", "burn-cuda"]
gpu = ["gpu-metal", "gpu-cuda"]
parallel = ["rayon"]

[package.metadata.maturin]
module-name = "hexatic.rho_fitting._rho_fitting_core"
python-source = "../.."
