[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "hexatic-rho-fitting-core"
version = "0.1.0"
requires-python = ">=3.12"

[tool.maturin]
module-name = "hexatic.rho_fitting._rho_fitting_core"
python-source = "../.."
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module", "gpu"]
